<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_collection_page"
        tools:context=".CollectionActivity" tools:layout_editor_absoluteY="64dp">

    <TextView
            android:text="@string/ca_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>
    <CheckBox
            android:text="@string/ca_nice"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:id="@+id/ca_L1"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="73dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"/>
    <CheckBox
            android:text="@string/ca_mean"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:id="@+id/ca_L2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/ca_L1"/>
    <CheckBox
            android:text="@string/ca_shitstir"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:id="@+id/ca_L3" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            app:layout_constraintTop_toBottomOf="@+id/ca_L2"
            android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/ca_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ca_B1" android:layout_marginTop="71dp"
            app:layout_constraintTop_toBottomOf="@+id/ca_L3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="44dp" android:layout_marginStart="44dp"
            android:onClick="onSaveChecks"
    />
</androidx.constraintlayout.widget.ConstraintLayout>