<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_show_question"
        tools:context=".ShowQuestionActivity">

    <TextView
            android:text="@string/testQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/game_next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sq_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:onClick="onClickQuestion"
            app:layout_constraintTop_toBottomOf="@+id/question"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"/>
    <TextView
            android:text="@string/cd_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countdown_text" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/question" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/sq_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>